# GeneAnalyzer2

./: .flake8  .gitattributes  .gitignore  .gitmessage.txt  README.md  pyproject.toml  simulated_orfs.fasta  simulated_orfs_output.txt  test_fasta.fasta  test_results.txt
.githooks/: commit-msg
.github/: CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
scripts/: dev_setup.py
src/geneanalyzertool/analysis/: BasicAnalysis.py  analysis.py  basic_analysis.py  file_conversion.py
src/geneanalyzertool/client/: main.py
src/geneanalyzertool/core/: exceptions.py  file_handler.py  sequences.py
tests/: test_basicSequenceAnalysis.py  test_basic_sequence_analysis.py
tests/analysis/: test_basic_sequence_analysis.py
tests/core/: test_file_handler.py
